[gd_scene load_steps=4 format=3 uid="uid://bdk2r07msnc2j"]

[ext_resource type="Script" path="res://levels/stages.gd" id="1_w554m"]
[ext_resource type="Texture2D" uid="uid://ihyxg4cxvx1q" path="res://levels/stage_1.png" id="2_n37p0"]
[ext_resource type="Texture2D" uid="uid://d2u4qd3f04ryo" path="res://levels/stage_2.png" id="3_ydpua"]

[node name="Stages" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w554m")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -982.0
offset_top = -326.0
offset_right = 982.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
columns = 3

[node name="Stage1Button" type="TextureButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_n37p0")

[node name="Stage2Button" type="TextureButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ydpua")

[node name="Stage3Button" type="TextureButton" parent="CenterContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ydpua")

[connection signal="pressed" from="CenterContainer/GridContainer/Stage1Button" to="." method="_on_stage_1_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Stage2Button" to="." method="_on_stage_2_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/Stage3Button" to="." method="_on_stage_3_button_pressed"]
